# cop

./: .gitignore  README.md  gray_devices_list.txt  main.py  pyproject.toml  requirements.txt
cop/: __main__.py  gray_devices_list.txt  launch_agent.py
